kubernetes/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
      - name: payment-service
        image: payment-service:jenkins

        ports:
        - containerPort: 5001

        imagePullPolicy: Never
