kubernetes/ticket-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ticket-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ticket-service

  template:
    metadata:
      labels:
        app: ticket-service

    spec:
      containers:
      - name: ticket-service
        image: ticket-service:jenkins

        ports:
        - containerPort: 5002

        imagePullPolicy: Never
