kubernetes/booking-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: booking-service

spec:
  selector:
    app: booking-service

  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

  type: NodePort
