kubernetes/payment-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:
  selector:
    app: payment-service

  ports:
  - port: 5001
    targetPort: 5001

  type: NodePort
