kubernetes/ticket-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ticket-service

spec:
  selector:
    app: ticket-service

  ports:
  - port: 5002
    targetPort: 5002

  type: NodePort
